# UnMoGrowP

./: .chatgpt-monitor.json  backup-claude-history.bat
.github/workflows/: agent-chatgpt-integration-concept.yml  ai-monitor.yml  basic-test.yml  dev-agents-integration-concept.yml  manual-test.yml  test-simple.yml
API_keys_console_anthropic/: API_keys_console_anthropic.odt
attribution/: .env.example  .gitignore  .prettierignore  .prettierrc  ACTIVATE_GITHUB.bat  ACTIVATION_SUMMARY.md  AI_EXPERTISE_MASTER.md  AI_TEAM_MEETING_2025-10-22_WEEK3_COMPLETION.md  ATTRIBUTION_ENGINE_COMPLETED.md  BUSINESS_INTELLIGENCE_PATTERNS.md  CHANGELOG.md  CHATGPT_INTEGRATION_DEPLOYMENT_REPORT.md  CLAUDE_LEARNING_INSIGHTS.md  CONTRIBUTING.md  DEVELOPMENT_CONTEXT.md  DOCKERFILE_TEMPLATES_SUMMARY.txt  FINAL_ACTIVATION_READY.md  FINAL_GITHUB_SETUP_INSTRUCTIONS.md  GITHUB_ISSUES_DEMO.md  GITHUB_SETUP_GUIDE.md  MASTER_PROJECT_CONTEXT.md  MONOREPO_STRUCTURE.md  Makefile  PROJECT_STRUCTURE_AND_DOCKER_STRATEGY.md  PR_DESCRIPTION.md  QUICK_GITHUB_ACTIVATION.md  README.md  REAL_DEVELOPMENT_PLAN.md  RELEASE.md  RELEASE_v0.2.0.md  SPRINT_ACHIEVEMENTS_OVERVIEW.md  TEAM_MEETING_2025-10-22.md  TEAM_MEETING_2025-10-22_WEEK2_REVIEW.md  TECH_STACK_2025.md  TODO.md  WEEK_2_SPRINT_EXECUTION_LOG.md  WEEK_2_SPRINT_SUMMARY.md  WEEK_3_SPRINT_LAUNCH.md  WEEK_3_SPRINT_SUMMARY.md  WEEK_4_DAY_2_EXECUTION_REPORT.md  (+19 more)
attribution/.claude/: project-context.json  project-context.md  settings.local.json
attribution/.github/: CODEOWNERS  MONITORING_SETUP.md  branch-protection.yml  dependabot.yml  pull_request_template.md
attribution/DOCUMENTS/: 00_Executive_Overview.md  00_Executive_Summary_One_Page.md  01_AppsFlyer_Attribution_System_Research.md  01_i_claude.ai_attribution_system_analysis.md  02_AppsFlyer_Tech_Stack_Analysis.md  02_i_claude.ai_ai_integration_plan.md  03_Future_Proof_Architecture_Greenfield_Attribution_Platform.md  03_i_chatgpt_appsflyer_system_analysis.md  04_Expected_Results_RU.md  04_i_chatgpt_appsflyer_tech_spec.md  05_Competitive_Analysis_Attribution_Platforms.md  05_i_claude.ai_unified_prediction_system.md  06_IDE_Setup_Guide_Development_Environment.md  06_i_claude.ai_campaign_automation_system.md  07_Complete_Technical_Specification_v1.0.md  07_Part_IV_Core_Features.md  07_Part_IX_Integration_Ecosystem.md  07_Part_VIII_Security_Privacy.md  07_Part_VII_Infrastructure_Deployment.md  07_Part_VI_Campaign_Automation.md  07_Part_V_AI_ML_Intelligence.md  07_Part_X_Monetization_GTM.md  08_Cohort_Analysis_Visualization_System.md  09_AI_ML_Infrastructure_Optimization.md  10_SDK_Performance_Monitoring_System.md  11_Push_Notifications_System.md  12_Analytics_Monetization_Ad_Network.md  README.md
attribution/api/: .env.example  .eslintrc.js  attribution-engine.ts  event-processor.ts  index-secure.ts  index.ts  multi-tenant-database.ts  package.json  streaming-processor.ts  test-attribution-system.js  trpc.ts
attribution/apps/: README.md
attribution/backend/: .env.example  go.mod  go.sum
attribution/backend-rust/: Cargo.toml
attribution/backend-rust/src/: main.rs
attribution/clickhouse-config/: users.xml
attribution/config/: docker-compose.yml
attribution/database/: README.md  clickhouse-event-processor.sql  clickhouse-schema.sql  clickhouse-simple.sql  customer-success-schema.sql  multi-tenant-clickhouse-schema.sql  multi-tenant-schema.sql  rbac-migration.sql  rbac-upgrade-migration.sql  schema.sql
attribution/ml-services/analytics-api/: Dockerfile  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
attribution/ml-services/analytics-api/models/: README_MULTI_PERIOD_SATURATION.md  __init__.py  churn.py  conversion.py  multi_period_saturation.py  revenue.py
attribution/ml-services/analytics-api/schemas/: __init__.py  predictions.py
attribution/ml-services/analytics-api/tests/: conftest.py  test_api_endpoints.py  test_ml_models.py
(+464 files in other folders)
