[package]
name = "unmogrowp-ingestion-rust"
version = "0.1.0"
edition = "2021"
authors = ["UnMoGrowP Team"]
description = "High-performance event ingestion service (Rust)"

[dependencies]
# Web Framework (10x faster than Go)
actix-web = "4.9"
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Databases
clickhouse = "0.14"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
redis = { version = "0.27", features = ["tokio-comp"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = "0.27"

# Performance
rayon = "1.10"  # Parallel processing

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
